[package]
name = "ipeek"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
maxminddb = "0.25"
dns-lookup = "2.0"
config = "0.15.9"
csv = "1.3.1"
serde-xml-rs = "0.6.0"
serde_json = "1.0.140"
serde_yml = "0.0.12"
rmp-serde = "1.3.0"
env_logger = "0.11.6"
tokio = "1.44.0"
trust-dns-resolver = "0.23.2"
lazy_static = "1.5.0"
comfy-table = "7"

[dev-dependencies]
actix-rt = "2.10.0"